--- a/layout/default/layout.css
+++ b/layout/default/layout.css
@@ -718,14 +718,9 @@ table {
 }
 
 .roundarenabutton {
-	/*width: 50px;
-	height: 50px;*/
 	left: 180px;
-	top: 210px;
-	position: absolute;
-	/*background: rgba(0,0,0,0.2);
-	box-shadow: rgba(0, 0, 0, 0.3) 0 0 0 1px;
-	border-radius:100%;*/
+	top: 50vh;
+	position: fixed;
 	z-index: 7;
 	transition-property: opacity;
 	overflow: hidden;
