--- a/layout/default/layout.css
+++ b/layout/default/layout.css
@@ -469,6 +469,9 @@ table {
 	width: calc(50% - 210px);
 	height: calc(100% - 370px);
 	left: calc(50% + 60px);
+	background: rgba(0, 0, 0, 0.2);
+    padding: 5px;
+	border-radius: 8px;
 	top: 200px;
 	overflow: hidden;
 }
